# agent-retrieval-bench

./: .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  README.md  index.html  pyproject.toml
configs/: crawl_targets.json
data/: repo_manifest.jsonl
data/audit/v0_clean/: keep_samples.jsonl  summary.json  testlog2code_full_summary.json
data/benchmark/v0_1/: code2test.jsonl  comment2context.jsonl  manifest.json  samples.jsonl  trace2code.jsonl
data/eval/v0_1/: lexical_details.jsonl  lexical_summary.json
data/reports/v0_1/: diagnostic_summary.json  report.md  sample_diagnostics.jsonl
docs/: agent_retrieval_bench_v1_blog.md  agent_retrieval_bench_v1_blog_zh.md  blog.html  index.html  v1_analysis.md
src/agent_retrieval_bench/: __init__.py  audit.py  baseline.py  cli.py  clone.py  code2test_pr.py  corpus.py  crawler.py  curate.py  derive.py  diagnostics.py  embedding_eval.py  filters.py  github_api.py  hardmine.py  hardness.py  io.py  logs.py  model_report.py  quality.py  release.py  repomap_eval.py  seed_report.py  trace_preflight.py  trace_repro.py
tests/: test_audit.py  test_code2test_pr.py  test_corpus_baseline.py  test_crawler.py  test_derive_quality.py  test_diagnostics.py  test_embedding_eval.py  test_filters.py  test_hardmine.py  test_hardness.py  test_logs.py  test_model_report.py  test_release.py  test_repomap_eval.py  test_seed_report.py  test_trace_preflight.py  test_trace_repro.py
